new test for find